Update SonarQube project configuration and add Minikube setup instructions
- Enhanced sonar-project.properties with project metadata including name, version, description, and organization.
- Specified source and test directories, along with exclusions and inclusions for test files.
- Added encoding configuration for source code.
- Created a new markdown file with commands to configure and start Minikube with specified CPU and memory settings, along with commands to check the SonarQube pod status and logs.